Add playbook to check if logged-in users exist. Add notes for OS.

--- a/pass_vars_pb1_to_pb2.yml
+++ b/pass_vars_pb1_to_pb2.yml
@@ -1,4 +1,8 @@
 ---
+#------------------------------------------------------------------------------
+# Note: Tested on RHEL 7.4
+#------------------------------------------------------------------------------
+
 # Combine multiple playbooks
   - import_playbook: pass_vars_pb1.yml
   - import_playbook: pass_vars_pb2.yml
