--- a/pass_vars_pb2.yml
+++ b/pass_vars_pb2.yml
@@ -1,4 +1,8 @@
 ---
+#------------------------------------------------------------------------------
+# Note: Tested on RHEL 7.4
+#------------------------------------------------------------------------------
+
 - hosts: all
   tasks:
     - name: Run static command
