Conditionals using facts

--- a/mail_failure.yml
+++ b/mail_failure.yml
@@ -1,4 +1,7 @@
 ---
+#------------------------------------------------------------------------------
+# Note: Tested on RHEL 7.4
+#------------------------------------------------------------------------------
 
 - hosts: all
   tasks:
