--- a/add_sudoers.yml
+++ b/add_sudoers.yml
@@ -1,4 +1,7 @@
 ---
+#------------------------------------------------------------------------------
+# Note: Tested on RHEL 7.4
+#------------------------------------------------------------------------------
 
 - hosts: all
   tasks:
@@ -8,4 +11,3 @@
         dest: /etc/sudoers.d/customgroup
         mode: 0440
         validate: /usr/sbin/visudo -cf %s
-      become: yes
